# api

./: .gitignore  Cargo.toml  README.md
src/: config.rs  encryption.rs  lib.rs  main.rs  server.rs  settings.toml  telemetry.rs
src/app/: app_config.rs  app_service_config.rs  mod.rs
src/app/back_end/: mod.rs  module_config.rs  module_service_config.rs
src/app/back_end/admin_module/api/: admin_config.rs  admin_service_config.rs  mod.rs
src/app/back_end/auth_module/api/: auth_config.rs  auth_service_config.rs  mod.rs
src/app/back_end/auth_module/api/actions/: auth_actions.rs  mod.rs
src/app/back_end/auth_module/api/models/: auth_models.rs  mod.rs
src/app/back_end/auth_module/api/routes/: auth_routes.rs  mod.rs
src/app/back_end/shared_module/api/migrations/: users_table.psql
src/app/back_end/shared_module/api/models/: mod.rs  shared_models.rs
src/app/back_end/users_module/api/: mod.rs  users_config.rs  users_service_config.rs
src/app/back_end/users_module/api/actions/: mod.rs  user_actions.rs  users.rs
src/app/back_end/users_module/api/models/: mod.rs  user_models.rs
src/app/back_end/users_module/api/routes/: mod.rs  user_routes.rs  users.rs
src/app/front_end/: mod.rs  module_config.rs  module_service_config.rs
src/app/front_end/website_module/: mod.rs  website_config.rs
src/app/front_end/website_module/css/: style.css
src/app/front_end/website_module/pages/: index.html  login-index.html
src/app/front_end/website_module/routes/: website.rs
src/app/front_end/website_module/scripts/: script.js
src/apps/: mod.rs
src/apps/admin/: mod.rs
src/apps/admin/routes/: mod.rs  status.rs
src/apps/users/migrations/: user_role_map_table.psql  user_roles_table.psql  users_table.psql
src/apps/users/models/: users.rs
src/apps/users/routes/: users.rs
src/modules/: api_config.rs  mod.rs  module_config.rs
src/modules/admin/api/: admin_config.rs  config.rs  mod.rs
src/modules/admin/api/routes/: status.rs
src/modules/admin_module/api/: admin_config.rs  mod.rs
src/modules/auth_module/: auth_config.rs
src/modules/auth_module/routes/: auth.rs
src/modules/users/api/: config.rs  users_config.rs
src/modules/users/api/routes/: users.rs
src/modules/users_module/api/: mod.rs  users_config.rs
src/modules/users_module/api/actions/: mod.rs  users.rs
src/modules/users_module/api/migrations/: user_roles_table.psql
src/modules/users_module/api/models/: users.rs
src/modules/users_module/api/routes/: users.rs
src/modules/website/: website_config.rs
src/modules/website/pages/: index.html
src/modules/website/routes/: mod.rs
src/modules/website_module/: website_config.rs
src/modules/website_module/pages/: index.html
src/modules/website_module/routes/: website.rs
