[package]
name = "api"
version = "0.1.0"
authors = ["Nicholas Jorgenson"]
edition = "2018"

[dependencies]
actix-http = "3.0.4"
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-files = "0.6.0"

rustls = "0.20.4"
rustls-pemfile = "1.0.0"

sqlx = { version = "0.5.13", features = ["runtime-actix-native-tls", "any", "macros", "postgres", "chrono", "migrate"] }

tracing = { version = "0.1.34", features = ["attributes"] }
tracing-log = "0.1.2"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.11", features = ["registry"] }
tracing-actix-web = "0.5.1"

serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
config = "0.13.1"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dev-dependencies]
reqwest = "0.11.10"

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"
