[package]
name = "api"
version = "0.1.0"
authors = ["Nicholas Jorgenson"]
edition = "2018"

[dependencies]
actix-http = "3"
actix-web = { version = "4", features = ["rustls"] }
actix-files = "0.6"

rustls = "0.20"
rustls-pemfile = "1"

sqlx = { version = "0.5", features = ["runtime-actix-native-tls", "any", "macros", "postgres", "chrono", "migrate"] }

tracing = { version = "0.1", features = ["attributes"] }
tracing-log = "0.1"
tracing-futures = "0.2"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-actix-web = "0.5"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.13"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.8", features = ["serde", "v4"] }

reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
reqwest = "0.11.10"

[lib]
path = "src/lib.rs"

[[bin]]
name = "api"
path = "src/main.rs"
